Refactor Codes